--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,8 +17,23 @@
             <%= f.input :password_confirmation, autocomplete: "new-password" %>
             <%= f.input :current_password, autocomplete: "new-password", hint: "(we need your current password to confirm your changes)" %>
             <div class="actions">
-              <%= f.submit "Update" %>
+              <%= f.submit "Update", class: 'btn btn-primary' %>
             </div>
+          <% end %>
+        </div>
+      </div>
+      <br />
+      <div class="card">
+        <div class="card-header">
+          Two factor authentication
+        </div>
+        <div class="card-body">
+          <% if current_user.otp_required_for_login %>
+            <p>Two factor authentication is enabled.</p>
+            <p><%= link_to('Disable Two Factor Authentication', two_factor_settings_path, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure you want to disable two factor authentication?'}) %></p>
+          <% else %>
+            <p>Two factor authentication is NOT enabled.</p>
+            <p><%= link_to('Enable Two Factor Authentication', new_two_factor_settings_path, class: 'btn btn-primary') %></p>
           <% end %>
         </div>
       </div>
@@ -28,7 +43,7 @@
           Cancel my account
         </div>
         <div class="card-body">
-          <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+          <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
         </div>
       </div>
     </div>
