--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,11 +46,9 @@
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
           <% flash.each do |key, value| %>
-            <div class="<%= flash_class(key) %>">
-              <button aria-label="Close" class="close" data-dismiss="alert" type="button">
-                <span aria-hidden="true">&times;</span>
-              </button>
+            <div class="<%= flash_class(key) %> alert-dismissible" role="alert">
               <%= value.to_s.html_safe %>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
           <% end %>
           <div class="mt-3 mb-5"><%= yield %></div>
